works with minor error on sync

--- a/jokeAPI.html
+++ b/jokeAPI.html
@@ -10,19 +10,28 @@
 </head>
 
 <body>
+    <div>
+        <a href="#!" id="clear">Clear</a>
+    </div>
+    <div>
+        <a href="#!" id="async">Call Async</a>
+    </div>
+    <div>
+        <a href="#!" id="sync">Call Sync</a>
+    </div>
     <div class="mainTable">
         <table id="Main table" style="width:100%">
             <tr>
                 <th>Joke One</th>
                 <th>Joke Two</th>
-                <th>Joke Three</th>
-                <th>Joke Four</th>
+                <th>Ip 1</th>
+                <th>Ip 2</th>
             </tr>
             <tr>
-                <td>pending</td>
-                <td>pending</td>
-                <td>pending</td>
-                <td>pending</td>
+                <td id="cell1">Not Started</td>
+                <td id="cell2">Not Started</td>
+                <td id="cell3">Not Started</td>
+                <td id="cell4">Not Started</td>
             </tr>
         </table>
     </div>
